fix: do not always show scrollbar on chrome

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -65,7 +65,7 @@
 
 :root {
     scroll-padding-top: 4rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100%;
 }
 
